[package]
name = "significance"
version = "0.1.0"
edition = "2021"

# Library configuration (default: src/lib.rs)
[lib]
name = "significance"
path = "src/lib.rs"

# Binary configurations (Cargo automatically finds binaries in src/bin/)
[[bin]]
name = "significance"
path = "src/bin/Significance.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
# Add testing dependencies here as needed